# chem-model-edit

./: .gitignore  .npmrc  Justfile  README.md  eslint.config.js  package.json  pnpm-lock.yaml
apps/api/: main.py  models.py  pyproject.toml
apps/api/services/: cif.py  export.py  parse.py  structures.py  supercell.py  transplant.py  zpe_worker.py
apps/api/services/auth/: __init__.py  passwords.py  settings.py  store.py
apps/api/services/zpe/: backends.py  cache.py  settings.py  worker.py  worker_auth.py
apps/api/tests/: test_auth_api.py  test_export.py  test_parse.py  test_zpe_http_worker_integration.py  test_zpe_jobs.py  test_zpe_kpoints.py
apps/web/: .cta.json  package.json  vite.config.ts
apps/web/src/: routeTree.gen.ts  styles.css
apps/web/src/components/: Header.tsx
apps/web/src/lib/: api.ts  pdb.ts  types.ts  xyz.ts
apps/web/src/routes/: __root.tsx  editor.tsx  index.tsx  supercell.tsx
apps/web/src/types/: molstar.d.ts
docs/: zpe-remote-worker-http-spec.ja.md  zpe-worker-setup.ja.md  zpe-worker-setup.md
ref-legacy/: AtomGUI9.py  ZPEGUI9.py  supercellbuilder9.py
samples/cif/: Al001_m4_relax_fromscratch.cif  slab_relax6_vac16_fix3.cif  slab_relax_vac16.cif
samples/qe-in/: Al001_m4_relax_fromscratch.in
scripts/: just  just_env.sh  uv_pick_cache.py
specs/001-chem-model-webapp/: plan.md  quickstart.md  share-notes.md  spec.md  tasks.md  ui-ux.md
specs/002-zpegui-backend/: plan.md  spec.md
specs/003-cicd-setup/: issue.md
specs/003-zpe-remote-compute/: plan.md
specs/004-zpe-user-queue-auth/: plan.md
(+24 files in other folders)
