[project]
name = "chem-model-api"
version = "0.1.0"
description = "Chem model editing API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ase>=3.27.0",
    "fastapi>=0.128.0",
    "pymatgen>=2025.10.7",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
